...
                                .tag(week)
                        }
                    }
                }
                Section {
                    Picker("Main Lift", selection: $selectedLift) {
                        Text("Select Lift").tag(Optional<Lift>(nil))
                        ForEach(lifts) { lift in
                            Text(lift.name ?? "").tag(lift as Lift?)
                                .accessibilityLabel(Text(lift.name ?? "lift options"))
                        }
                    }
                }
                Section {
                    HStack {
                        Spacer()
                        Button("Create") {
                            saveClicked()
                        }
                        .buttonStyle(.borderedProminent)
                        .alert(isPresented: $isError) {
                            Alert(title: Text("Error"), message: Text(errorString), dismissButton: .default(Text("OK")))
                        }
...
